--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.4.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "ws": "^8.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
